--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
   </head>
   <body>
     <h1>Welcome to the Weather app</h1>
-    <footer>Built by Déborah Laport</footer>
+    <footer>
+      Built by
+      <a href="https://github.com/DeborahShaenice" target="_blank"
+        >Déborah Laport</a
+      >
+      hosted on
+      <a href="https://github.com/DeborahShaenice/Weather-app" target="_blank"
+        >GitHub</a
+      >
+      and website hosted on
+      <a
+        href="https://shecodesweatherappfinalproject.netlify.app/"
+        target="_blank"
+        >Netlify</a
+      >
+    </footer>
   </body>
 </html>
