--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <body>
     <h1>Welcome to the Weather app</h1>
     <footer>
-      Built by
+      Coded by
       <a href="https://github.com/DeborahShaenice" target="_blank"
         >Déborah Laport</a
       >
-      hosted on
+      , is
       <a href="https://github.com/DeborahShaenice/Weather-app" target="_blank"
-        >GitHub</a
+        >is open-sourced on GitHub</a
       >
-      and website hosted on
+      and hosted on
       <a
         href="https://shecodesweatherappfinalproject.netlify.app/"
         target="_blank"
