Added the HTML to the project

--- a/index.html
+++ b/index.html
@@ -6,9 +6,21 @@
     <title>Weather app</title>
   </head>
   <body>
-    <h1>Welcome to the Weather app</h1>
+    <header>
+<form>
+    <input type="search" placeholder="Enter a city *..." required/>
+    <input type="submit" value="search"/>
+</form>
+    </header>
+    <main>
+   <div> <h1>Courbevoie</h1>
+    <p>Tuesday 14:49, scattered clouds
+        <br/>
+        Humidity: 66%, Wind: 3.13km/h
+    </p> </div>
+    <div>⛅12°C</div>
     <footer>
-      Coded by
+      This project was coded by
       <a href="https://github.com/DeborahShaenice" target="_blank"
         >Déborah Laport</a
       >
@@ -22,6 +34,7 @@
         target="_blank"
         >Netlify</a
       >
+      </main>
     </footer>
   </body>
 </html>
