--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather app</title>
+    <link rel="stylesheet" href="src/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Radio+Canada+Big:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
   </head>
   <body>
+    <div class="weather-app">
     <header>
 <form>
     <input type="search" placeholder="Enter a city *..." required/>
@@ -35,6 +40,6 @@
         >Netlify</a
       >
       </main>
-    </footer>
+    </footer></div>
   </body>
 </html>
