--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
         <br/>
         Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong> 
     </p> </div>
+    <div class="weather-app-temperature-container">
    <div class="weather-app-icon">⛅</div><div class="weather-app-temperature">12</div><div class="weather-app-unit">°C</div></div>
-    <footer>
+    </div><footer>
       This project was coded by
       <a href="https://github.com/DeborahShaenice" target="_blank"
         >Déborah Laport</a
