--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <body>
     <div class="weather-app">
     <header>
-<form class="search-form">
-    <input type="search" placeholder="Enter a city ..." required class="search-form-input"/>
+<form class="search-form" id="search-form">
+    <input type="search" placeholder="Enter a city ..." required class="search-form-input" id="search-form-input"/>
     <input type="submit" value="search" class="search-form-button"/>
 </form>
     </header>
     <main>
         <div class="weather-app-data">
-   <div> <h1 class="weather-app-city">Courbevoie</h1>
+   <div> <h1 class="weather-app-city" id="city">Courbevoie</h1>
     <p class="weather-app-details">Tuesday 14:49, scattered clouds
         <br/>
         Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong> 
@@ -43,5 +43,6 @@
       >
       </main>
     </footer></div>
+    <script src="src/index.js"></script>
   </body>
 </html>
