--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     </header>
     <main>
         <div class="weather-app-data">
-   <div> <h1 class="weather-app-city" id="city">Courbevoie</h1>
+   <div> <h1 class="weather-app-city" id="city"></h1>
     <p class="weather-app-details">Tuesday 14:49, scattered clouds
         <br/>
         Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong> 
     </p> </div>
     <div class="weather-app-temperature-container">
-   <div class="weather-app-icon">⛅</div><div class="weather-app-temperature">12</div><div class="weather-app-unit">°C</div></div>
+   <div class="weather-app-icon">⛅</div><div class="weather-app-temperature" id="temperature"></div><div class="weather-app-unit">°C</div></div>
     </div><footer>
       This project was coded by
       <a href="https://github.com/DeborahShaenice" target="_blank"
