--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         Humidity: <strong id="humidity"></strong>, Wind: <strong id="wind-speed"></strong> 
     </p> </div>
     <div class="weather-app-temperature-container">
-   <div class="weather-app-icon">⛅</div><div class="weather-app-temperature" id="temperature"></div><div class="weather-app-unit">°C</div></div>
+   <div id="icon"></div>
+   <div class="weather-app-temperature" id="temperature"></div><div class="weather-app-unit">°C</div></div>
     </div><footer>
       This project was coded by
       <a href="https://github.com/DeborahShaenice" target="_blank"
