--- a/index.html
+++ b/index.html
@@ -28,14 +28,25 @@
     <div class="weather-app-temperature-container">
    <div id="icon"></div>
    <div class="weather-app-temperature" id="temperature"></div><div class="weather-app-unit">°C</div></div>
-    </div><footer>
+    </div>
+    <div class="weather-forecast">
+        <div class="row">
+            <div class="col-2">
+                <div class="weather-forecast-date">
+                Thu</div>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bf/Circle-icons-weather.svg/768px-Circle-icons-weather.svg.png" alt="cloudy_weather_icon" width="36">
+            <div class="weather-forecast-temperatures"><span class="weather-forecast-temperature-max">18°</span> <span class="weather-forecast-temperature-min">12°</span> </div>
+            </div>
+        </div>
+    </div>
+    <footer>
       This project was coded by
       <a href="https://github.com/DeborahShaenice" target="_blank"
         >Déborah Laport</a
       >
       , is
       <a href="https://github.com/DeborahShaenice/Weather-app" target="_blank"
-        >is open-sourced on GitHub</a
+        >open-sourced on GitHub</a
       >
       and hosted on
       <a
