inject the forecast HTML from js

--- a/index.html
+++ b/index.html
@@ -29,15 +29,7 @@
    <div id="icon"></div>
    <div class="weather-app-temperature" id="temperature"></div><div class="weather-app-unit">°C</div></div>
     </div>
-    <div class="weather-forecast">
-        <div class="row">
-            <div class="col-2">
-                <div class="weather-forecast-date">
-                Thu</div>
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bf/Circle-icons-weather.svg/768px-Circle-icons-weather.svg.png" alt="cloudy_weather_icon" width="36">
-            <div class="weather-forecast-temperatures"><span class="weather-forecast-temperature-max">18°</span> <span class="weather-forecast-temperature-min">12°</span> </div>
-            </div>
-        </div>
+    <div class="weather-forecast" id="forecast">
     </div>
     <footer>
       This project was coded by
