--- a/index.html
+++ b/index.html
@@ -4,50 +4,65 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather app</title>
-    <link rel="stylesheet" href="src/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Radio+Canada+Big:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>  
-</head>
+    <link rel="stylesheet" href="src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Radio+Canada+Big:ital,wght@0,400..700;1,400..700&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
+  </head>
   <body>
     <div class="weather-app">
-    <header>
-<form class="search-form" id="search-form">
-    <input type="search" placeholder="Enter a city ..." required class="search-form-input" id="search-form-input"/>
-    <input type="submit" value="search" class="search-form-button"/>
-</form>
-    </header>
-    <main>
+      <header>
+        <form class="search-form" id="search-form">
+          <input
+            type="search"
+            placeholder="Enter a city ..."
+            required
+            class="search-form-input"
+            id="search-form-input"
+          />
+          <input type="submit" value="search" class="search-form-button" />
+        </form>
+      </header>
+      <main>
         <div class="weather-app-data">
-   <div> <h1 class="weather-app-city" id="city"></h1>
-    <p class="weather-app-details" > <span id="time"></span>, <span id="description"></span>
-        <br/>
-        Humidity: <strong id="humidity"></strong>, Wind: <strong id="wind-speed"></strong> 
-    </p> </div>
-    <div class="weather-app-temperature-container">
-   <div id="icon"></div>
-   <div class="weather-app-temperature" id="temperature"></div><div class="weather-app-unit">°C</div></div>
-    </div>
-    <div class="weather-forecast" id="forecast">
-    </div>
-    <footer>
-      This project was coded by
-      <a href="https://github.com/DeborahShaenice" target="_blank"
-        >Déborah Laport</a
-      >
-      , is
-      <a href="https://github.com/DeborahShaenice/Weather-app" target="_blank"
-        >open-sourced on GitHub</a
-      >
-      and hosted on
-      <a
-        href="https://shecodesweatherappfinalproject.netlify.app/"
-        target="_blank"
-        >Netlify</a
-      >
+          <div>
+            <h1 class="weather-app-city" id="city"></h1>
+            <p class="weather-app-details">
+              <span id="time"></span>, <span id="description"></span>
+              <br />
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind-speed"></strong>
+            </p>
+          </div>
+          <div class="weather-app-temperature-container">
+            <div id="icon"></div>
+            <div class="weather-app-temperature" id="temperature"></div>
+            <div class="weather-app-unit">°C</div>
+          </div>
+        </div>
+        <div class="weather-forecast" id="forecast"></div>
       </main>
-    </footer></div>
+      <footer>
+        This project was coded by
+        <a href="https://github.com/DeborahShaenice" target="_blank"
+          >Déborah Laport</a
+        >
+        , is
+        <a href="https://github.com/DeborahShaenice/Weather-app" target="_blank"
+          >open-sourced on GitHub</a
+        >
+        and hosted on
+        <a
+          href="https://shecodesweatherappfinalproject.netlify.app/"
+          target="_blank"
+          >Netlify</a
+        >
+      </footer>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
